Horizontal Money Key

--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -875,21 +875,20 @@ var legend = vis.append('g')
 var legendBars = legend.selectAll('rect')
     .data(legendAmounts)
   .enter().append('rect')
-    .attr("x", function(d,i) {return ((i*(legend_bar_margin+legend_bar_width)))})
+    .attr("x", function(d,i) {return 0})
     .attr("y", function(d,i) {return (max_bar_height - (i*bar_height_increment))})
-    .attr("width", legend_bar_width)
-    .attr("height", function(d, i) {return (min_bar_height+(i*bar_height_increment))})
+    .attr("height", legend_bar_width)
+    .attr("width", function(d, i) {return (min_bar_height+(i*bar_height_increment))})
     .attr("fill", function (d) {return c(d)})
   ;
 legend.selectAll('text')
   .data(legendAmounts)
 .enter().append('text')
-  .attr("y",function(d,i) {return (legend_font_size +(i*( legend_bar_margin+legend_bar_width)))})
-  .attr("x", function(d,i) {return -1*(max_bar_height +min_bar_height - legend_bar_margin)})
+  .attr("y",function(d,i) {return (max_bar_height - (i*bar_height_increment) + legend_font_size)})
+  .attr("x", function(d,i) {return 0})
   .attr("text-anchor", "start")
   .attr("font-size", legend_font_size)
   .attr("fill", "#333")
-  .attr("transform",function(d,i) {return "rotate(-90)"})
   .text(function(d) {return "$" + money(d)})
 
 legend.append("svg:foreignObject")
