--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,54 @@
 <% provide(:title, 'Home') %>
 <% provide(:first_header, "Chinese Development Finance") %>
+
+<ul class="nav nav-tabs" id="homeTab">
+  <li class="active"><a href="#map">Visualize</a></li>
+  <li><a href="#chart">Analyze</a></li>
+  <li><a href="/projects">All Projects</a></li>
+  <li><a href="#activity-feed">Recent Activity</a></li>
+  <li><a href="#research">Research and Papers</a></li>
+  <li><a href="#documentation">Data and API Documentation</a></li>
+</ul>
+
+
+<div class="tab-content">
+  <div class="tab-pane active" id="map">
+  	<h2>Visualize</h2>
+		<%= render partial: 'static_pages/map_js', locals: {total_projects: @total_projects} %>
+  </div>
+  <div class="tab-pane" id="chart">
+  	<h2>Analyze</h2>
+  	<p>Forthcoming</p>
+  </div>
+  <div class="tab-pane" id="activity-feed">	
+		<h2>Recent Activity</h2>
+		<%= render 'shared/feed' %>
+		<%= link_to "See All Recent Activity...", versions_path %>
+	</div>
+  <div class="tab-pane" id="research">...</div>
+  <div class="tab-pane" id="documentation">
+  	<% # This is copied from README
+  	%>
+  	<%= render partial: "documentation.html.md" %>
+  </div>
+</div>
+
+
 <div class="row">
-	<h2>Visualize</h2>
-	<%= render partial: 'static_pages/map_js', locals: {total_projects: @total_projects} %>
 </div>
 <div id='activity-feed' class="row">
-	<h2>Recent Activity</h2>
-	<%= render 'shared/feed' %>
-	<%= link_to "See All Recent Activity...", versions_path %>
+
 </div>
+
+<script>
+  $(function () {
+		$('#homeTab a').click(function (e) {
+			if ($(this).attr('href').substr(0,1) != '/') 
+				{
+					e.preventDefault();
+					}
+			$(this).tab('show');
+		})
+		$('#homeTab a:first').tab('show');
+	})
+</script>
