--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -63,11 +63,17 @@ var w = 800,
 var top_projects_data =[]
 <% end %>
 
+//Some formatting functions
 function nicemoney(amount){
 if (amount<1000){return money(d3.round(amount,0))} else{
     if (amount>=1000 && amount<1000000){return d3.round((amount/1000),0)+"K"} else{
         if (amount>=1000000 && amount<1000000000){return d3.round((amount/1000000),1)+"M"} else{
             if (amount>=1000000000){return money(d3.round((amount/1000000000),2))+"B"}}}}}
+function nicemoneyaxis(amount){
+if (amount<1000){return amount.toFixed(1)} else{
+    if (amount>=1000 && amount<1000000){return (amount/1000).toFixed(1)+"K"} else{
+        if (amount>=1000000 && amount<1000000000){return (amount/1000000).toFixed(1)+"M"} else{
+            if (amount>=1000000000){return (amount/1000000000).toFixed(1)+"B"}}}}}
 
 var pie = d3.layout.pie()
    .value(function(d) {return d.value});
@@ -419,6 +425,7 @@ function try_drawing_overlay() {
   yAxis = d3.svg.axis()
     .scale(sector_area_y)
     .orient('left')
+    .tickFormat(function(d){return "$"+nicemoneyaxis(d)})
   area_chart.append("svg:g")
     .attr('class', 'axis')
     .call(yAxis)
