--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -38,6 +38,7 @@
     <li><%= link_to "Org. Origins", origins_path %></li>
     <li><%= link_to "Org. Types", organization_types_path %></li>
     <li><%= link_to "Org. Roles", roles_path %></li>
+    <li><%= link_to "Flag Types", flag_types_path %></li>
 
 
   </ul>
