Fixed export header

--- a/app/views/projects/_project_flaggable.html.erb
+++ b/app/views/projects/_project_flaggable.html.erb
@@ -11,7 +11,8 @@
 		$('.flag-link')
 			.click(function(link) {
 				link.preventDefault()
-				$(this).popover('toggle')
+				$('.flag-link').popover('hide')
+				$(this).popover('show')
 
 				$(".flag-popover").append('<input id="flag_flaggable_id" name="flag[flaggable_id]" size="10" type="hidden" value="'+$(this).parent().attr('flaggable_id')+'">' +
 					'<input id="flag_flaggable_type" name="flag[flaggable_type]" size="10" type="hidden" value="'+$(this).parent().attr('flaggable_type')+'">'
