--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,8 +13,8 @@
 
 <ul class="nav nav-tabs" id="projectTab">
   <li class="active"><a href="#details">Project Details</a></li>
-  <li><a href="#flags">Flags</a></li>
-  <li><a href="#history">History</a></li>
+  <li><a href="#flags">Flags (<%= @flags.count %>)</a></li>
+  <li><a href="#history">History (<%= @history.count %>)</a></li>
 </ul>
 
 
