--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= javascript_include_tag   "application" %>
   <%= render :partial => 'layouts/ga' if Rails.env == 'production' %>
   <%= csrf_meta_tags %>
+  <% if Rails.env.test? %>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"> </script>
+  <% end %>
       <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
