--- a/app/views/projects/_project_flag_form.html.erb
+++ b/app/views/projects/_project_flag_form.html.erb
@@ -1,6 +1,7 @@
 	
 	<%= simple_form_for(@flag, method: :post, url: flags_path,  html: {class: "flag-popover"}) do |f| %>
 		<%= f.input :flag_type_id, wrapper_html: {style: "display:none;"}, input_html: {value: flag_type_id } %>
+		<%= f.input :owner_id, wrapper_html: {style: "display:none;"}, input_html: {value: current_user.id } %>
 		<%= f.input :source, hint: "Source URL" %>
 		<%= f.input :comment, label: "Message", input_html: {rows: 2} %>
 		<%= f.button :submit, "Submit" %>  
