--- a/app/views/projects/_project_transactions.html.erb
+++ b/app/views/projects/_project_transactions.html.erb
@@ -8,6 +8,9 @@
 					 (<%= t.value.blank? ? unset_data : "%.2f" % t.value.round(2) %> <%= t.currency.nil? ? '' : t.currency.iso3 %><% if t.usd_current && @project.year!=2009 && t.currency.iso3 != 'USD' %>,
 					  	$<%= t.usd_current %><% end %><% if @project.year %> in <%= @project.year %><% end %>)
 					<% end %>
+					<% t.flags.each do |flag| %>
+						<a href="#flag_<%= flag.id %>" class='flag-reference' style="color:<%= flag.flag_type.color %>;">[<%= @flag_counter +=1 %>] </a>
+					<% end %>
 				</li>
 			<% end %>
 		</ul>
