--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -51,6 +51,7 @@ var w = 800,
     xy = d3.geo.mercator().scale(w*4.5).translate([.125*w,.375*h]),
     path = d3.geo.path().projection(xy),
     c = d3.scale.linear().domain([0,8000000000,150000000000]).range(['#FAEDD9', '#808F12', '#2A5C0B']),
+    logscale = d3.scale.log().domain([1,150000000000]),
     greyscalec = d3.scale.linear().domain([0,5]).range(['#8A8A8A','#FFFFFF']),
     c_sector= d3.scale.category20c(),
     money = d3.format("0,r")
@@ -196,6 +197,9 @@ function make_map_with_params(params) {
         d.values.value_current = null
       }
 
+//Rescale params - double check for color consistency
+       c.domain([0,((d3.max(map_data, function(m) {return m.values.value}))/20),d3.max(map_data, function(m) {return m.values.value})]);
+       logscale.domain([1,d3.max(map_data, function(m) {return m.values.value})]);
 
       country = d3.select("#states #"+d.key)
       color = d.values.value == null ? '#777' : c(d.values.value)
@@ -229,7 +233,7 @@ function time_since(time) {
 }
 make_map_with_params({})
 
-make_legend([100000000,500000000,10000000000,50000000000,100000000000,150000000000])
+make_legend(logscale.ticks())
 
 //                     ___....--- Click   //    //    //    // 
 // ***---______...--***                  //    //    //    //
@@ -816,6 +820,17 @@ function fuzz() {
      d3.selectAll('.fuzz')
     .transition()
       .attr("filter", "url(#blur)");
+      
+//Rescale legend
+ //Redraw rects
+ vis.selectAll('rect#legend')
+    .transition()
+    .attr("width", 0);
+ //Redraw text
+ vis.selectAll('text#legend')
+.transition()
+  .attr("fill","#FFFFFF")
+  .text("");     
 }
 function unfuzz (delay, duration) {
   <% if Rails.env.development? %>
@@ -827,7 +842,28 @@ function unfuzz (delay, duration) {
       .delay(delay || 100)
       .duration(duration || 100)
       .attr("filter", "")
-      .each("end", recolor_and_add_listeners)
+      .each("end", recolor_and_add_listeners);
+
+if(logscale.ticks().length>0){ 
+ //Rescale legend
+oldlegendArray=logscale.ticks()
+newlegendArray=[]
+newlegendArray.push(oldlegendArray[(oldlegendArray.length/2).toFixed(0)])
+newlegendArray.push(oldlegendArray[((oldlegendArray.length/2)+1).toFixed(0)])
+newlegendArray = newlegendArray.concat(oldlegendArray.slice(-4))
+//Redraw rects
+vis.selectAll('rect#legend')
+    .data(newlegendArray)
+    .transition().duration(2000)
+    .attr("width", function(d, i) {return (min_bar_height+(i*bar_height_increment))})
+    .attr("fill", function (d) {return c(d)});
+//Redraw text
+vis.selectAll('text#legend')
+  .data(newlegendArray)
+.transition().duration(2000)
+  .attr("fill", function(d,i) {return greyscalec(i)})
+  .text(function(d) {return "$" + nicemoney(d)})}
+  else{}
 }
 function recolor_and_add_listeners() {
   country = d3.select(this);
@@ -838,8 +874,8 @@ function recolor_and_add_listeners() {
       .on("mouseover", highlight)
       .on("mouseout", unhighlight)
       .style('cursor', 'pointer')
-        .transition()
-          .attr("fill",  c(data_item.values.value))
+//        .transition()
+//          .attr("fill",  c(data_item.values.value))
 
   }
   else {
@@ -878,34 +914,40 @@ String.prototype.pluralize = function(count, plural)
 
 function make_legend(legendAmounts) {
 //---------------------------  LEGEND  ----------------------------------
+oldlegendArray=legendAmounts
+newlegendArray=[]
+newlegendArray.push(oldlegendArray[(oldlegendArray.length/2).toFixed(0)])
+newlegendArray.push(oldlegendArray[((oldlegendArray.length/2)+1).toFixed(0)])
+newlegendArray = newlegendArray.concat(oldlegendArray.slice(-4))
 legend_bar_width = (18/800)*w
 legend_bar_margin = 2
 min_bar_height = (6/80)*h
 bar_height_increment = (2/80)*h
 legend_font_size = 10
-max_bar_height = min_bar_height + (bar_height_increment * (legendAmounts.length-1))
+max_bar_height = min_bar_height + (bar_height_increment * (newlegendArray.length-1))
 var legend = vis.append('g')
     .attr("id", "legend")
     .attr("transform", "translate("+(w/10)+","+((5/8)*h)+")")
-    .attr("class", 'fuzz')
-var legendBars = legend.selectAll('rect')
-    .data(legendAmounts)
+var legendBars = legend.selectAll('rect#legend')
+    .data(newlegendArray)
   .enter().append('rect')
     .attr("x", function(d,i) {return 0})
     .attr("y", function(d,i) {return (max_bar_height - (i*bar_height_increment))})
     .attr("height", legend_bar_width)
-    .attr("width", function(d, i) {return (min_bar_height+(i*bar_height_increment))})
+    .attr("width", function(d, i) {return 0})
     .attr("fill", function (d) {return c(d)})
+    .attr("id","legend")
   ;
 legend.selectAll('text')
-  .data(legendAmounts)
+  .data(newlegendArray)
 .enter().append('text')
   .attr("y",function(d,i) {return (max_bar_height - (i*bar_height_increment) + legend_font_size)})
   .attr("x", function(d,i) {return 0})
   .attr("text-anchor", "start")
   .attr("font-size", legend_font_size)
-  .attr("fill", function(d,i) {return greyscalec(i)})
-  .text(function(d) {return "$" + nicemoney(d)})
+  .attr("fill", function(d,i) {return "#FFFFFF"})
+  .text(function(d) {return ""})
+  .attr("id","legend");
 
 legend.append("svg:foreignObject")
   .attr("height", "100")
