new rake tasks, flag superscripts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -272,6 +272,10 @@ label {
 		cursor:pointer;
 	}
 	
+	.flag-reference {
+		font-size:x-small; 
+		vertical-align:top;
+	}
 .project-page {
   line-height:16px;
   h3 {
